# chalk-metrics

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  build.rs  metrics.json
benches/: metrics_throughput.rs  prometheus_export.rs  statsd_export.rs
chalk-metrics-macros/: Cargo.toml
chalk-metrics-macros/src/: lib.rs
examples/: basic_usage.rs
src/: client.rs  codegen.rs  generated.rs  lib.rs  macros.rs  private.rs  schema.rs  worker.rs
src/aggregator/: count.rs  gauge.rs  histogram.rs  mod.rs  sketch.rs  striped_map.rs
src/export/: mod.rs  prometheus.rs  statsd.rs
tests/: integration.rs  macro_compile.rs
tests/ui/: macro_invalid_metric_type.rs  macro_invalid_metric_type.stderr  macro_valid.rs
