[package]
name = "chalk-metrics"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
parking_lot = "0.12"
hashbrown = "0.15"
libc = "0.2"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "time", "sync", "net", "macros"] }
async-trait = "0.1"

[build-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
