[workspace]
members = [".", "chalk-metrics-macros"]

[package]
name = "chalk-metrics"
version = "0.0.0"
edition = "2024"
license = "Apache-2.0"
description = "Fast composable metrics defined with Rust macros"

[dependencies]
chalk-metrics-macros = { path = "chalk-metrics-macros" }
parking_lot = "0.12"
hashbrown = "0.15"
libc = "0.2"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "time", "sync", "net", "macros"] }
async-trait = "0.1"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
trybuild = "1.0"

[[bench]]
name = "metrics_throughput"
harness = false

[[bench]]
name = "prometheus_export"
harness = false

[[bench]]
name = "statsd_export"
harness = false
